fix: updated category compliance title aligned title to center

--- a/webapp/src/app/pacman-features/secondary-components/compliance-overview-trend/compliance-overview-trend.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/compliance-overview-trend/compliance-overview-trend.component.css
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -30,33 +30,23 @@
 }
 
 #complianceOverview {
+  padding: 24px;
   overflow: scroll;
 }
 
 .delete-title {
   cursor: pointer;
-  margin-left: auto;
-}
-
-.delete-title .delete-icon {
-  /* padding: 4px;
-  height: 18px;
-  width: 18px; */
-}
-
-#complianceOverview {
-  padding: 24px;
 }
 
 .multiline-brush-zoom-container {
+  min-height: 25.83em;
   position: relative;
   font-size: 1em;
 }
 
 .sub-header {
   padding: 16px 24px;
-  background-color: #ffffff;
-  /* border: solid 1px #d6e2f1; */
+  background-color: var(--background-white);
   color: #555;
   font-size: 1em;
   border-bottom: 2px solid var(--border-100);
@@ -67,13 +57,11 @@
   height: 24px;
   color: var(--text-black-emphasis);
   font: var(--text-body-2);
-  padding: 5px 0px;
+  padding: 5px 0;
 }
 
-.multiline-brush-zoom-container {
-  position: relative;
-  min-height: 25.83em;
-  font-size: 1em;
+.sub-header-wrapper > * {
+    margin-left: auto;
 }
 
 .sub-footer {
